@@ -17,6 +17,15 @@ Extend DashProfiler::Apache to do handler plumbing for periods?
 
   Fixed fatal error in visit_profile_nodes for DBI profiles with no Data.
 
+  Changed propagate_period_count() to not reset period_count.
+  Changed to increment period_count in end_sample_period() not start_sample_period().
+  Changed start_sample_period() to not call end_sample_period() automatically.
+    So now multiple start_sample_period() calls without end_sample_period() calls
+    are harmless - the period runs from the most recent start_sample_period() call.
+
+  Added period_strict_start and period_strict_end attributes to control how
+    missing/multiple start_sample_period() & end_sample_period calls are handled.
+
 =head2 DashProfiler 1.07 - r32 - Aug 16 2007
 
   Added DashProfiler::Apache
